--- a/Spriggit.Installer.Windows/CustomUI.wxs
+++ b/Spriggit.Installer.Windows/CustomUI.wxs
@@ -20,6 +20,7 @@
       <DialogRef Id="InstallDirDlg" />
       <DialogRef Id="InvalidDirDlg" />
       <DialogRef Id="LicenseAgreementDlg" />
+      <DialogRef Id="CustomizeDlg" />
       <DialogRef Id="MaintenanceTypeDlg" />
       <DialogRef Id="MaintenanceWelcomeDlg" />
       <DialogRef Id="MsiRMFilesInUse" />
@@ -52,8 +53,14 @@
       
       <!-- License Agreement Dialog -->
       <Publish Dialog="LicenseAgreementDlg" Control="Back" Event="NewDialog" Value="WelcomeDlg" Condition="1" />
-      <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="InstallDirDlg" Condition="LicenseAccepted = &quot;1&quot;" />
-      
+      <Publish Dialog="LicenseAgreementDlg" Control="Next" Event="NewDialog" Value="CustomizeDlg" Condition="LicenseAccepted = &quot;1&quot;" />
+
+
+      <Publish Dialog="CustomizeDlg" Control="Back" Event="NewDialog" Value="MaintenanceTypeDlg" Order="1" Condition="Installed" />
+      <Publish Dialog="CustomizeDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg" Order="2" Condition="NOT Installed" />
+      <Publish Dialog="CustomizeDlg" Control="Next" Event="NewDialog" Value="VerifyReadyDlg" />
+
+
       <!-- Install Directory Dialog - MODIFIED to go to PathOptionsDlg -->
       <Publish Dialog="InstallDirDlg" Control="Back" Event="NewDialog" Value="LicenseAgreementDlg" Condition="1" />
       <Publish Dialog="InstallDirDlg" Control="Next" Event="CheckTargetPath" Value="[WIXUI_INSTALLDIR]" Order="1" Condition="1" />
