--- a/Spriggit.Installer.Windows/Package.wxs
+++ b/Spriggit.Installer.Windows/Package.wxs
@@ -1,28 +1,29 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs"
     xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui"
 >
-    <Package Id="Spriggit.Installer.Windows" Name="Spriggit" Manufacturer="Mutagen Modding" Version="0.38.6">
+    <Package Id="Spriggit.Installer.Windows" Name="Spriggit" Manufacturer="Mutagen Modding" Version="0.38.6" Scope="perUser">
         <Property Id="ApplicationFolderName" Value="Spriggit" />
         <Property Id="WixAppFolder" Value="Spriggit" />
-        <Property Id="ADDTOPATH" Value="0" />
+        <Property Id="SuppressICEs" Value="ICE91" />
         <WixVariable Id="WixUILicenseRtf" Value="$(var.ProjectDir)..\LICENSE.rtf" />
         <WixVariable Id="WixUIDialogBmp" Value="$(var.ProjectDir)..\SpriggitDialog.png" />
         
         <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeError)" />
         <MediaTemplate EmbedCab="true" />
-        
-        <!-- Property for WixUI_InstallDir -->
-        <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
-        
-        <!-- Reference our custom UI -->
-        <UIRef Id="WixUI_InstallDir" />
-        <UIRef Id="WixUI_Common" />
 
-        <Feature Id="Main" Description="!(loc.CLIFeatureDescription)" Title="!(loc.CLIFeatureTitle)">
+        <ui:WixUI
+                Id="WixUI_FeatureTree"
+                InstallDirectory="INSTALLFOLDER"
+        />
+
+        <Feature Id="Main" Description="!(loc.CLIFeatureDescription)" Title="!(loc.CLIFeatureTitle)" ConfigurableDirectory="INSTALLFOLDER">
             <ComponentGroupRef Id="CLI" Primary="true" />
-            <ComponentGroupRef Id="PathEnvironment" Primary="false" />
+            <ComponentRef Id="RemoveFilesComponent" />
+            <Feature Id="AddToPath" Description="!(loc.PathFeatureDescription)" Title="!(loc.PathFeatureTitle)">
+                <ComponentGroupRef Id="PathEnvironment" Primary="true" />
+            </Feature>
         </Feature>
-        <Feature Id="UI" Description="!(loc.UIFeatureDescription)" Title="!(loc.UIFeatureTitle)">
+        <Feature Id="UI" Description="!(loc.UIFeatureDescription)" Title="!(loc.UIFeatureTitle)" ConfigurableDirectory="INSTALLFOLDER">
             
         </Feature>
     </Package>
