--- a/Spriggit.Installer.Windows/PathComponent.wxs
+++ b/Spriggit.Installer.Windows/PathComponent.wxs
@@ -1,10 +1,10 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
   <Fragment>
     <ComponentGroup Id="PathEnvironment" Directory="INSTALLFOLDER">
-      <Component Id="PathEnvironmentComponent" Guid="{12345678-1234-1234-1234-123456789012}" Condition="ADDTOPATH=1">
+      <Component Id="PathEnvironmentComponent" Guid="{A31D9A82-9E0A-423F-ADFA-6831046B2184}">
         <Environment Id="PATH" Name="PATH" Value="[INSTALLFOLDER]" Permanent="no" Part="last" Action="set" System="no" />
         
-        <RegistryValue Root="HKLM" Key="Software\Mutagen Modding\Spriggit" Name="PathAdded" Type="string" Value="[INSTALLFOLDER]" KeyPath="yes" />
+        <RegistryValue Root="HKCU" Key="Software\Mutagen Modding\Spriggit" Name="PathAdded" Type="string" Value="[INSTALLFOLDER]" KeyPath="yes" />
       </Component>
     </ComponentGroup>
   </Fragment>
