--- a/Spriggit.Installer.Windows/CLIComponents.wxs
+++ b/Spriggit.Installer.Windows/CLIComponents.wxs
@@ -2,7 +2,8 @@
   <Fragment>
     <ComponentGroup Id="CLI" Directory="INSTALLFOLDER">
       <Component Id="SpriggitCLIExe" Guid="{F5D80F8A-8356-46AE-B764-BC3D618C0C83}">
-          <File Source="win-x64\publish\Spriggit.CLI.exe" KeyPath="yes" />
+          <RegistryValue Root="HKCU" Key="Software\Mutagen Modding\Spriggit" Name="Installed" Type="string" Value="[INSTALLFOLDER]" KeyPath="yes" />
+          <File Source="win-x64\publish\Spriggit.CLI.exe" />
           <File Source="win-x64\publish\Spriggit.CLI.Lib.pdb" />
           <File Source="win-x64\publish\Spriggit.CLI.Lib.xml" />
           <File Source="win-x64\publish\Spriggit.CLI.pdb" />
