--- a/Spriggit.Installer.Windows/Folders.wxs
+++ b/Spriggit.Installer.Windows/Folders.wxs
@@ -1,9 +1,16 @@
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
   <Fragment>
-    <StandardDirectory Id="ProgramFiles6432Folder">
+    <StandardDirectory Id="LocalAppDataFolder">
       <Directory Id="ManufacturerFolder" Name="!(bind.Property.Manufacturer)">
         <Directory Id="INSTALLFOLDER" Name="!(bind.Property.ProductName)" />
       </Directory>
     </StandardDirectory>
+    
+    <Component Id="RemoveFilesComponent" Directory="INSTALLFOLDER" Guid="{79117B80-84BC-4615-8207-FD077DC67ECD}">
+      <RegistryValue Root="HKCU" Key="Software\Mutagen Modding\Spriggit" Name="Installed" Type="integer" Value="1" KeyPath="true" />
+      <RemoveFile Id="RemoveInstallFolder" Directory="INSTALLFOLDER" On="uninstall" Name="*" />
+      <RemoveFolder Id="RemoveInstallFolderDir" Directory="INSTALLFOLDER" On="uninstall" />
+      <RemoveFolder Id="RemoveManufacturerFolderDir" Directory="ManufacturerFolder" On="uninstall" />
+    </Component>
   </Fragment>
 </Wix>
